--- a/src/app/_pages/products-page/products-page.component.html
+++ b/src/app/_pages/products-page/products-page.component.html
@@ -1,1 +1,5 @@
-<p>products-page works!</p>
+
+<div>
+  <app-product-list [medias]="films"></app-product-list>
+  <app-product-list [medias]="albums"></app-product-list>
+</div>
