ajout du style avec bootstrap

--- a/src/app/_pages/products-page/product-list/product-list.component.html
+++ b/src/app/_pages/products-page/product-list/product-list.component.html
@@ -1,7 +1,5 @@
-<div *ngFor="let media of medias">
-  <div class="row">
-    <div class="col-4">
-      <app-product-card [media]="media"></app-product-card>
-    </div>
+<div class="row container-fluid mt-5 justify-content-center">
+  <div *ngFor="let media of medias" class="col-3">
+    <app-product-card [media]="media"></app-product-card>
   </div>
 </div>
