--- a/src/app/_pages/products-page/product-card/product-card.component.html
+++ b/src/app/_pages/products-page/product-card/product-card.component.html
@@ -1,9 +1,8 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
+  <img class="card-img-top" [src]="media.img" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{media.nom}}</h5>
-    <p class="card-text">{{media.synopsis}}
-    </p>
+    <p class="card-text">{{media.synopsis}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
